<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SignUpFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_color">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="375dp" />


        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/dark_blue"
            android:src="@drawable/closebtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />


        <EditText
            android:id="@+id/register_fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:hint="@string/register_full_name_edt"
            android:inputType="textPersonName"
            android:padding="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.063"
            android:autofillHints="" tools:targetApi="o" />

        <EditText
            android:id="@+id/register_emailId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:hint="@string/register_email_edt"
            android:inputType="textEmailAddress"
            android:padding="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_fullName"
            app:layout_constraintVertical_bias="0.058"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:hint="@string/register_password_edt"
            android:inputType="textPassword"
            android:padding="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/register_emailId"
            app:layout_constraintVertical_bias="0.08"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/register_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:hint="@string/register_confirm_password_edt"
            android:inputType="textPassword"
            android:padding="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            app:layout_constraintVertical_bias="0.08"
            android:autofillHints="" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12sp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_bg"
            android:text="@string/sign_up_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/register_confirmPassword"
            app:layout_constraintVertical_bias="0.111"
            android:enabled="false" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/or_tv"
            android:textColor="@color/login_form_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
            app:layout_constraintVertical_bias="0.056" />

        <View
            android:id="@+id/divider3"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_btn"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
            app:layout_constraintVertical_bias="0.169" />

        <View
            android:id="@+id/divider4"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/sign_up_btn"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
            app:layout_constraintVertical_bias="0.24" />

        <TextView
            android:id="@+id/already_have_anAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/already_have_an_account_tv"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>





</FrameLayout>