<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SignInFragment"
    android:background="@drawable/background_color">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="360dp" />

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/closebtn"
            android:background="@color/dark_blue"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name_title"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.121" />

        <EditText
            android:id="@+id/login_emailId"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_email_edt"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.778" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/et_bg"
            android:drawableRight="@drawable/seepassword"
            android:hint="@string/enter_password_edt"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_emailId" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            android:layout_marginStart="18sp"
            android:layout_marginEnd="20sp"
            android:text="@string/sign_in_btn"
            android:background="@drawable/btn_bg"
            android:textColor="@color/login_form_details_medium"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:enabled="false"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't Remember password"
            android:textColor="@color/login_form_details"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
            android:layout_marginTop="16dp"/>

        <!--Or-->





        <!--OR -->

        <View
            android:id="@+id/footer_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/dontHaveAnAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/Dont_have_an_account_tv"
            android:textColor="@color/login_form_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_line"
            app:layout_constraintVertical_bias="0.483" />

        <TextView
            android:id="@+id/sign_in_with_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_fb"
            android:textColor="@color/login_form_details"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintBottom_toBottomOf="@id/footer_line"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/fbicon"
            android:drawablePadding="8dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="28dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_with_fb"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/sign_in_btn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/or_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/divider2"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_with_fb"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintVertical_bias="0.303"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>



</FrameLayout>